<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ID:" />

        <EditText
            android:id="@+id/rgName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Password:" />
        <EditText
            android:id="@+id/rgPassword"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Password Confirm:" />
        <EditText
            android:id="@+id/rgPasswordConfirm"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Name:" />
        <EditText
            android:id="@+id/teacherName"
            android:layout_width="310dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Birthday:" />

        <EditText
            android:id="@+id/birthday"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:inputType="none"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="PhoneNumber:" />
        <EditText
            android:id="@+id/PhoneNumber"
            android:layout_width="260dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="Gender:" />
        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/text_rbFemale" />

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/text_rbMale" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/textSubject" />

        <Spinner
            android:id="@+id/spSubject1"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="190dp"
            android:layout_marginTop="5dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/textSubject" />

        <Spinner
            android:id="@+id/spSubject2"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="190dp"
            android:layout_marginTop="5dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/textSubject" />

        <Spinner
            android:id="@+id/spSubject3"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="190dp"
            android:layout_marginTop="5dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <Button
        android:id="@+id/btCreat"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/textCreat"
            android:background="@color/Project"/>

        <Button
        android:id="@+id/btBack"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
        android:text="@string/textBack"
            android:background="@color/Project"/>
    </LinearLayout>


</LinearLayout>